# Guiscript

./: .gitignore  FNAFTIMELINE.txt  README.md  debttest.py  dstest.py  example.gss  example.gst  genhelpstrings.py  gradestest.py  main.py  pyproject.toml  requirements.txt  stats.prof  test.py  todo.md  uwu.py
demos/: calculator_demo.py  docking_demo.py  gettingstarted_demo.py
guidemd/: element.md  elements.md  guide.md  helpstrings.md  manager.md  setup.md  utility.md
src/guiscript/: __init__.py  animation.py  buffer.py  common.py  components.py  cursors.py  enums.py  error.py  events.py  googleiconsfontttf.py  icon.py  interact.py  manager.py  navigation.py  richtext.py  script.py  settings.py  state.py  status.py  strimages.py  style.py  tooltip.py  types.py  utils.py
src/guiscript/_guis/: animation.py  buffer.py  common.py  components.py  cursors.py  enums.py  error.py  events.py  help.py  interact.py  manager.py  navigation.py  richtext.py  script.py  settings.py  sound.py  state.py  status.py  strimages.py  style.py  tooltip.py  types.py  utils.py
src/guiscript/_guis/elements/: element.py  entries.py  extra.py  factories.py  menus.py  players.py  root.py  scrollbars.py  stacks.py  windows.py
src/guiscript/elements/: element.py  entries.py  factories.py  menus.py  players.py  root.py  scrollbars.py  stacks.py  tooltip.py  windows.py
tests/: example.gss
